log
Thu 14 Sep 2023 12:59:06 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:22: error: expected expression before ‘TreeMap’
   45 |   return nextTreeMap(TreeMap *tree);
      |                      ^~~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
01e0fd0
Thu 14 Sep 2023 12:59:31 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
e8489dd
Thu 14 Sep 2023 01:00:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
c625756
Thu 14 Sep 2023 01:14:31 PM UTC: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  6|7
total_score: 5/70
965d636
Thu 14 Sep 2023 01:19:31 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|7
total_score: 5/70
7325ba4
Thu 14 Sep 2023 01:21:02 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
61d2b7f
Thu 14 Sep 2023 01:25:12 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|7
total_score: 5/70
1f86b7c
Thu 14 Sep 2023 01:33:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
e686cfb
Thu 14 Sep 2023 01:36:10 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 5/70
1a24b4b
Thu 14 Sep 2023 01:59:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:19: error: ‘TreeMap’ has no member named ‘is_equal’
   84 |     int cmp = tree->is_equal(key, current->pair->key);
      |                   ^~
Compilation failed
ec4fc32
Thu 14 Sep 2023 02:00:12 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:84:15: error: too few arguments to function ‘is_equal’
   84 |     int cmp = is_equal(key, current->pair->key);
      |               ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
a04a733
Thu 14 Sep 2023 02:01:21 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:86:9: error: too few arguments to function ‘is_equal’
   86 |     if (is_equal(key, current->pair->key);){
      |         ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
treemap.c:86:42: error: expected ‘)’ before ‘;’ token
   86 |     if (is_equal(key, current->pair->key);){
      |        ~                                 ^
      |                                          )
Compilation failed
be432d0
Thu 14 Sep 2023 02:02:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
68e12f0
Thu 14 Sep 2023 02:16:14 PM UTC: 
 treemap.c | 40 ++++++++++++++++++++++++++++++++--------
 1 file changed, 32 insertions(+), 8 deletions(-)
 tests:  0|0
09ffd78
Thu 14 Sep 2023 02:23:23 PM UTC: 
 treemap.c | 39 ++++++++++++++++++++++++++++-----------
 1 file changed, 28 insertions(+), 11 deletions(-)
 tests:  12|6
total_score: 15/70
8bea7e7
